// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Story host styles With Args 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c21=""
    _nghost-a-c22=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c22=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Story host styles With story template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _ngcontent-a-c19=""
    _nghost-a-c20=""
    ng-reflect-text="Button with custom styles"
  >
    <button
      _ngcontent-a-c20=""
    >
      Button with custom styles
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
